# spreadify

./: .gitignore  app.html  deployment_instructions.md  digitalocean.yaml  index.html  package-lock.json  package.json  php.ini  platformsh.yaml  vite.config.ts
.github/workflows/: deploy-pages.yml  jekyll-gh-pages.yml
app/Config/: App.php  Database.php
app/Helpers/: Common_helper.php
assets/: index-CuLc5wrS.css  index-Y_pM19_S.js
backend/: .dockerignore  .env  .env.example  Dockerfile  README.md  fly.toml  generate_uuid.py  init_db.py  pyproject.toml  railway.toml  test_hls.py  token.txt  ws_key.txt
backend/app/: auth.py  database.py  dependencies.py  main.py  models.py
backend/app/crud/: __init__.py  user.py
backend/app/db/: __init__.py  database.py  init_mock_data.py  models.py
backend/app/models/: user.py
backend/app/routers/: auth.py  streams.py  stripe.py  webrtc.py
backend/app/routes/: analytics.py  auth.py  channels.py  chat.py  encoding.py  overlays.py  payments.py  rtmp.py  schedules.py  signaling.py  social_auth.py  streams.py  subscriptions.py
backend/app/routes/music/: apple.py  spotify.py
backend/app/routes/payments/: __init__.py  paypal.py
backend/app/routes/streaming/: facebook.py  linkedin.py  twitch.py  youtube.py
backend/app/schemas/: auth.py  social_channels.py  stream.py
backend/app/services/: video_processor.py
backend/tests/: generate_jwt_token.py  generate_test_token.py  generate_ws_key.py  get_token.py  websocket_test.py
frontend/: .env  .env.example  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  server.js  static.json  tailwind.config.js  tailwind.config.mjs  vercel.json  vite.config.ts
install/: database.sql  do_install.php  index.php  success.php
src/: App.css  App.tsx
(+138 files in other folders)
