[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.8"}
psycopg = {extras = ["binary"], version = "^3.2.4"}
aiortc = "^1.10.0"
ffmpeg-python = "^0.2.0"
stripe = "^11.5.0"
uvicorn = "^0.34.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.20"
aiofiles = "^24.1.0"
google-auth = "^2.38.0"
python-dotenv = "^1.0.1"
pydantic = {extras = ["email"], version = "^2.10.6"}
websockets = "^14.2"
httpx = "^0.28.1"
python-ffmpeg-video-streaming = "^0.1.16"
sqlalchemy = "^2.0.37"
aiosqlite = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
